package com.poo.unlu.observador;

public interface Observador {
    void actualizar();
}
